--- a/visualizer/src/static/header.html
+++ b/visualizer/src/static/header.html
@@ -29,10 +29,11 @@
       />
       <button
         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-4 px-8 rounded-full m-2"
+        onclick="generateAnalysisJob();"
       >
         Run New Analysis
       </button>
     </div>
 
     <div class="container mx-auto px-4 border-2 border-indigo-100 mb-5 p-5">
-      <h2 class="text-xl">Recent Results</h2>
+      <h2 class="text-xl font-bold">Recent Results</h2>
