added live analyses

--- a/visualizer/src/static/header.html
+++ b/visualizer/src/static/header.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Live Burbs</title>
+    <title>Ecoacoustics Analysis Pipeline</title>
   </head>
 
   <body>
@@ -19,7 +19,7 @@
     </header>
 
     <div class="flex flex-col items-center">
-      <h1 class="font-bold text-5xl text-center p-10 underline">Live Burbs</h1>
+      <h1 class="font-bold text-5xl text-center p-10 underline">Ecoacoustics Analysis Pipeline</h1>
 
       <input
         id="filename-input"
